# haskell-blackjack-pd

./: CHANGELOG.md  README.md  blackjack.cabal  haskell-blackjack-pd.cabal
app/: Main.hs
data/: reglas.txt
src/: BlackJack.hs  GameFunctions.hs
