cabal-version:      2.4
name:               haskell-blackjack-pd
version:            0.1.0.0


license:            MIT
license-file:       LICENSE
author:             Nicolas Marsh
maintainer:         nicolasmarsh94@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-blackjack-pd
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: GameFunctions, BlackJack

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0,
                      random, 
                      containers,
                      text
    hs-source-dirs:   app, src
    default-language: Haskell2010
